# hrd-radiogenomics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: TRAINING.md  swap_maya_fixture.md
pipelines/: Snakefile  config.yaml
pipelines/scripts/: build_manifest.py  download_clinical_features.py  download_knijnenburg.py  eval_radiomics_test.py  eval_test.py  evaluate_external.py  extract_radiomics_features.py  preprocess_all.py  split_holdout_test.py  train_radiomics.py
reports/: tripod_ai_v0.md
scripts/: bootstrap_lambda.sh  bootstrap_test_auroc.py  build_brca_external_manifest.py  eval_external_cohort.py  find_better_demo_ct.py
src/radiogenomics/: __init__.py  dataset.py  interpret.py  preprocess.py  train.py
src/radiogenomics/backbones/: __init__.py  med3d.py  monai_densenet.py
src/radiogenomics/data/: __init__.py  tcga_ov.py  tcia.py
tests/: test_preprocess.py
