[project]
name = "hrd-radiogenomics"
version = "0.0.1"
description = "Predict HRD status from CT scans via 3D CNN transfer learning on TCGA-OV × TCIA paired data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Patrisiya Rumyantseva" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    # ML: 3D CNN training
    "torch>=2.3",
    "torchvision>=0.18",
    "monai>=1.4",          # medical-imaging transforms + pretrained 3D backbones
    # Imaging I/O
    "pydicom>=2.4",
    "nibabel>=5.2",
    "SimpleITK>=2.4",      # reliable DICOM series → volume conversion
    # Classical + eval
    "scikit-learn>=1.5",
    "scipy>=1.13",
    # Classical-radiomics feature extraction (Pan et al. 2024 baseline)
    "pyradiomics>=3.1",
    "pandas>=2.2",
    "pyarrow>=17",         # parquet
    # Pipelines + config
    "snakemake>=8.16",
    "pyyaml>=6.0",
    "typer>=0.12",
    "tqdm>=4.66",
    "requests>=2.32",
    "wandb>=0.17",
    # Interpretability (Grad-CAM 3D)
    "grad-cam>=1.5",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pandas-stubs>=2.2",
    "types-PyYAML>=6.0",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radiogenomics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["radiogenomics"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["torch.*", "torchvision.*", "monai.*", "SimpleITK.*", "pydicom.*", "nibabel.*", "wandb.*"]
ignore_missing_imports = true
